# ner-with-llm

./: .gitignore  extract_1.ipynb  extract_2.ipynb  extract_3.ipynb  main.py  pyproject.toml  test.ipynb
results/: extract1.xlsx  extract2.xlsx  extract3_battery.xlsx  extract3_lamp.xlsx
