[project]
name = "ner-with-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "jpype1>=1.6.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pymupdf>=1.26.4",
    "pymupdf4llm>=0.0.27",
    "python-docx>=1.2.0",
]
